# ZerePy-patched

./: .gitignore  pyproject.toml
src/goat/classes/: plugin_base.py
src/zerepy/: agent.py  cli.py  helpers.py  main.py
