[tool.poetry]
name = "zerepy"
version = "0.1.0"
description = "ZerePy AI Agent CLI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "zerepy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
prompt_toolkit = "^3.0.40"
anthropic = "^0.26.0"
openai = "^1.98.0"
web3 = "^6.18.0"
python-dotenv = "^1.0.1"
tqdm = "*"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
